[Java Runtime Sandbox] make it non-overrideable